# HeightMapAlgoritm

./: .gitignore  CMakeLists.txt  README.md  key  key.pub
HeightMapAlgorithm/: README.txt
HeightMapAlgorithm/header/: c_Camera.h  c_EBO.h  c_Shader.h  c_VBO.h  yAxisAlg.h
HeightMapAlgorithm/src/: c_Camera.cpp  c_EBO.cpp  main.cpp  yAxisAlg.cpp
Shaders/: Default.frag  Default.vert  light.frag  light.vert
header/: c_Camera.h  c_Texture.h  c_VAO.h
libraries/: TODO  glfw
libraries/glad/include/glad/: glad.h
libraries/glad/src/: glad.c
libraries/glfw-3.4/docs/html/: jquery.js
libraries/glm/: CMakeLists.txt
libraries/stb/: stb_image.h
src/: c_Camera.cpp  c_Shader.cpp  c_Texture.cpp  c_VAO.cpp  c_VBO.cpp  main.cpp
